testdata/bad/timestamp_68.ion
2004-12-11T12:60:11z
